# substack-cli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  package-lock.json  package.json
.beads/: config.yaml  metadata.json
src/: application.rs  cli.rs  client.rs  error.rs  image_file.rs  lib.rs  local_post_manifest.rs  main.rs  mcp.rs  prosemirror.rs  table_image.rs  types.rs
tests/: application.rs  cli.rs  image_file.rs  local_post_manifest.rs  prosemirror.rs  table_image.rs
