[package]
name = "substack-cli"
version = "0.2.0"
edition = "2024"

[lib]
name = "substack_cli"
path = "src/lib.rs"

[[bin]]
name = "substack"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
thiserror = "2"
